@@ -1,0 +1,20 @@
+//===== Athena Script ========================================
+//= Thor's Volcano Dungeon Warp Script
+//===== By: ==================================================
+//= $ephiroth
+//===== Current Version: =====================================
+//= 1.0
+//===== Compatible With: =====================================
+//= Any Athena Version 
+//===== Description: =========================================
+//= Warp Points for Thor's Volcano Dungeon
+//===== Additional Comments: =================================
+//= 1.0 Initial version [$ephiroth]
+//============================================================
+
+//= Thor's Volcano Dungeon====================================
+thor_v01.gat,21,223,0	warp	thor00	1,1,ve_fild03.gat,168,238
+thor_v01.gat,202,34,0	warp	thor01	1,1,thor_v02.gat,74,205
+thor_v02.gat,72,206,0	warp	thor02	1,1,thor_v01.gat,199,34
+thor_v02.gat,191,55,0	warp	thor03	1,1,thor_v03.gat,31,272
+thor_v03.gat,28,272,0	warp	thor04	1,1,thor_v02.gat,190,57
